# aura

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  README.md  RUN.md  alembic.ini  compose.docker.yaml  compose.yaml  pyproject.toml
.github/workflows/: ci.yml  deploy-staging.yml
apps/api/: config.py  main.py
apps/api/dependencies/: auth.py  db.py  services.py
apps/api/routers/: __init__.py  agents.py  api_keys.py  artifacts.py  auth.py  chat.py  conversations.py  datasources.py  llm_admin.py  mcp.py  skills.py  spaces.py  tenants.py  webhooks.py
apps/web/: next.config.ts  package-lock.json  package.json  tailwind.config.ts  tsconfig.tsbuildinfo
apps/web/src/: middleware.ts
apps/worker/: main.py  worker_settings.py
apps/worker/jobs/: __init__.py  agents.py  identity_sync.py  ingestion.py
aura/: __init__.py
aura/adapters/: __init__.py
aura/adapters/connectors/: __init__.py  base.py  graph_client.py  sharepoint.py  sharepoint_graph.py
aura/adapters/db/: models.py  session.py  space_repository.py
aura/adapters/embeddings/: __init__.py  litellm.py
aura/adapters/langfuse/: __init__.py  client.py
aura/adapters/mcp/: __init__.py  http_sse.py  protocol.py
aura/adapters/qdrant/: __init__.py  filter_builder.py  setup.py
aura/adapters/registry/: __init__.py  manifest_validator.py  skill_manifest_validator.py
aura/adapters/runtime/: __init__.py  loader.py
aura/adapters/s3/: __init__.py  client.py
aura/adapters/sandbox/: __init__.py  docker.py  factory.py  k8s.py  provider.py
aura/domain/: __init__.py  contracts.py  models.py
aura/services/: __init__.py  agent_chat_service.py  agent_service.py  api_key_service.py  audit_service.py  authz_service.py  bootstrap.py  chat.py  connector_sync_service.py  conversation_service.py  cost_management_service.py  datasource_service.py  event_dispatcher_service.py  identity.py  identity_sync_service.py  ingestion_service.py  litellm_admin_service.py  llm_provider_service.py  llm_service.py  mcp_server_service.py  pii_service.py  policy_service.py  prompt_service.py  registry_service.py  retrieval.py  skill_service.py  space_service.py  trigger_scheduler_service.py
aura/utils/: __init__.py  archive.py  observability.py  passwords.py  secrets.py
docs/: CLAUDE.md  README.md
docs/antipattern/: ANTI_PATTERNS_BREADTH.md  ANTI_PATTERNS_DEPTH.md
docs/evolutions/: P1.md  P2.md  P3.md
docs/phases/: phase_0_foundation.md  phase_10_llm_governance.md  phase_1_identity.md  phase_2_spaces.md  phase_3_ingestion.md  phase_4_retrieval_chat.md  phase_5_policies_pii.md  phase_6_connectors.md  phase_7_agents.md  phase_8_skills_sandbox.md  phase_9_ops.md
docs/spec/: 00_core.md  01_contracts.md  02_services.md  03_knowledge.md  04_agents.md  05_api.md  06_ops.md  07_db_schema.md  08_ux_architecture.md  09_triggered_agents.md  10_mcp_bridge.md  11_agent_chat_integration.md
docs/superpowers/specs/: 2026-04-15-frontend-redesign-design.md
infra/: docker-compose.yml
infra/alembic/: env.py  role_helpers.py
infra/alembic/versions/: 001_initial_tenants.py  002_identity_tables.py  003_spaces_and_profiles.py  004_ingestion_tables.py  005_chat_tables.py  006_policy_tables.py  007_agent_registry.py  008_skill_registry.py  (+3 more)
infra/docker/: Dockerfile.api  Dockerfile.web  Dockerfile.worker  api-entrypoint.sh  worker-entrypoint.sh
infra/init/: 01_roles.sql
infra/litellm/: config.yaml
scripts/: docker-reset-dev-data.sh  docker-up-all.sh
tests/: conftest.py  test_filter_builder.py
tests/critical/: test_critical_failures.py
tests/integration/: test_agents.py  test_chat.py  test_connectors.py  test_identity.py  test_ingestion.py  test_skills_mcp.py  test_spaces.py
tests/load/: phase_9_ops.js
tests/unit/: conftest.py  test_archive_security.py  test_identity_service.py  test_mcp_http_sse.py  test_pii_service.py  test_policy_service.py  test_skill_service.py
(+56 files in other folders)
