[project]
name = "aura"
version = "0.1.0"
description = "AURA foundation baseline"
requires-python = ">=3.12,<3.13"
dependencies = [
    "alembic~=1.13.0",
    "arq~=0.25.0",
    "asyncpg~=0.29.0",
    "boto3~=1.34.0",
    "fastapi~=0.115.0",
    "httpx~=0.27.0",
    "pydantic~=2.7.0",
    "pydantic-settings~=2.3.0",
    "qdrant-client~=1.9.0",
    "redis~=5.0.0",
    "sqlalchemy~=2.0.0",
    "uvicorn~=0.29.0",
]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["apps", "apps.api", "apps.worker", "aura", "aura.adapters", "aura.adapters.db"]
