[project]
name = "aura"
version = "0.1.0"
description = "AURA foundation baseline"
requires-python = ">=3.12,<3.13"
dependencies = [
    "alembic~=1.13.0",
    "arq~=0.25.0",
    "asyncpg~=0.29.0",
    "boto3~=1.34.0",
    "email-validator~=2.1.0",
    "fastapi~=0.115.0",
    "httpx~=0.27.0",
    "pydantic~=2.7.0",
    "pydantic-settings~=2.3.0",
    "PyJWT[crypto]~=2.8.0",
    "qdrant-client~=1.9.0",
    "redis~=5.0.0",
    "sqlalchemy~=2.0.0",
    "uvicorn~=0.29.0",
]

[project.optional-dependencies]
test = [
    "pytest~=8.2.0",
    "pytest-asyncio~=0.23.0",
    "httpx~=0.27.0",
    "cryptography~=42.0.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
filterwarnings = [
    "ignore:The event_loop fixture provided by pytest-asyncio has been redefined:DeprecationWarning",
]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = [
    "apps",
    "apps.api",
    "apps.api.dependencies",
    "apps.api.routers",
    "apps.worker",
    "aura",
    "aura.adapters",
    "aura.adapters.db",
    "aura.domain",
    "aura.services",
]
