[project]
name = "aura"
version = "0.1.0"
description = "AURA foundation baseline"
requires-python = ">=3.12,<3.13"
dependencies = [
    "alembic~=1.13.0",
    "arq~=0.25.0",
    "asyncpg~=0.29.0",
    "boto3~=1.34.0",
    "email-validator~=2.1.0",
    "fastapi~=0.115.0",
    "httpx~=0.28.0",
    "langfuse~=3.0",
    "llama-index-core~=0.14.0",
    "llama-index-embeddings-litellm~=0.5.0",
    "llama-index-readers-file~=0.6.0",
    "opentelemetry-api~=1.27.0",
    "opentelemetry-exporter-otlp-proto-http~=1.27.0",
    "opentelemetry-instrumentation-fastapi~=0.48b0",
    "opentelemetry-instrumentation-sqlalchemy~=0.48b0",
    "opentelemetry-sdk~=1.27.0",
    "pydantic~=2.12.0",
    "pydantic-settings~=2.12.0",
    "presidio-analyzer~=2.2.0",
    "presidio-anonymizer~=2.2.0",
    "pydantic-ai~=1.79.0",
    "PyJWT[crypto]~=2.8.0",
    "PyYAML~=6.0.0",
    "python-multipart~=0.0.26",
    "qdrant-client~=1.9.0",
    "redis~=5.0.0",
    "spacy~=3.8.0",
    "sqlalchemy~=2.0.0",
    "uvicorn~=0.29.0",
]

[project.optional-dependencies]
test = [
    "pytest~=8.2.0",
    "pytest-asyncio~=0.23.0",
    "httpx~=0.28.0",
    "cryptography~=42.0.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
filterwarnings = [
    "ignore:The event_loop fixture provided by pytest-asyncio has been redefined:DeprecationWarning",
]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = [
    "apps",
    "apps.api",
    "apps.api.dependencies",
    "apps.api.routers",
    "apps.worker",
    "apps.worker.jobs",
    "aura",
    "aura.adapters",
    "aura.adapters.db",
    "aura.adapters.connectors",
    "aura.adapters.embeddings",
    "aura.adapters.langfuse",
    "aura.adapters.mcp",
    "aura.adapters.qdrant",
    "aura.adapters.registry",
    "aura.adapters.runtime",
    "aura.adapters.sandbox",
    "aura.adapters.s3",
    "aura.domain",
    "aura.services",
    "aura.utils",
]
